2008-02-05  Lillian Angel  <langel@redhat.com>

	* acinclude.m4: Moved conditional to beginning of LIBGCJ block.
	* configure: Regenerate.
	* configure.ac: Set LIBGCJ_OLD conditional to false if --with-icedtea
	option is used. If building with icedtea, gcc 4.3 must be installed.

2008-02-05  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Only apply patches/icedtea-gcc-4.3.patch if
	libgcj-4.3.0.jar is installed.
	* Makefile.in: Regenerate.
	* acinclude.m4: If libgcj-4.3*.jar is not found, then search for
	libgcj-4.1*.jar and set LIBGCJ_OLD.
	* configure: Regenerate.

2008-02-05  Bernhard Rosenkränzer  <bero@arklinux.org>

	* configure.ac: Added check for jar. If fastjar is not found, then jar
	is used.
	* configure: Regenerate.
	* patches/icedtea-gcc-4.3.patch: New patch for gcc 4.3.

2008-02-05  Lillian Angel  <langel@redhat.com>

	Fixes Bug #96
	* Makefile.am
	(clean-tools): Added clean-hotspot-tools to dependencies.
	(ICEDTEA_PATCHES): Added gcc 4.3 patches.
	(INSTALL): Updated for libgcj-4.3.0.
	* Makefile.in: Regenerate.
	* acinclude.m4: Updated for libgcj-4.3.0.jar.
	* AUTHORS: Added Bernhard Rosenkränzer.

2008-02-01  Gary Benson  <gbenson@redhat.com>

	* patches/icedtea-lib64.patch: Fixed to silence warning.

2008-01-31  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/zero/vm/bytecodeInterpreter_zero.hpp
	(LOTS_OF_REGS): Define as appropriate for lots of targets.

2008-01-31  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/zero/vm/bytes_zero.hpp
	(get_native_u2): Implement for little endian machines.
	(get_native_u4): Likewise.
	(get_native_u8): Likewise.
	(put_native_u2): Likewise.
	(put_native_u4): Likewise.
	(put_native_u8): Likewise.

	* ports/hotspot/src/cpu/zero/vm/cppInterpreter_zero.cpp
	(accessor_entry): Work on little endian machines.

2008-01-31  Gary Benson  <gbenson@redhat.com>

	* Makefile.am (hotspot, hotspot-helper): New rules.
	* Makefile.in: Regenerated.

2008-01-29  Gary Benson  <gbenson@redhat.com>
